<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layContenidoProyecto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvNombreProyecto"
        android:textColor="@color/action_bar"
        android:text="@string/project_name"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgvProyecto"
        android:src="@drawable/picture"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:layout_weight="1"
            android:textColor="@color/action_bar"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtvEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="1"
            android:textColor="@color/action_bar"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtvWebsite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:layout_weight="1"
            android:textColor="@color/action_bar"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgvEstadoProyecto"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/active"/>


        <ImageView
            android:id="@+id/imgvEmailProyecto"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/message"/>

        <ImageView
            android:id="@+id/imgvWebProyecto"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/web"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/descripcionProyecto"
        android:textColor="@color/action_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvDescripcionProyecto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integrantes"
        android:textColor="@color/action_bar"/>

</LinearLayout>