<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/layoutContenidoPerfilUsuario"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:weightSum="1">

<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:id="@+id/imgvPerfilUsuario"
    android:src="@drawable/picture"
    android:layout_gravity="center_horizontal" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Nombre Usuario"
    android:textColor="@color/action_bar"
    android:id="@+id/txtvNombreUsuario"
    android:layout_gravity="center"/>



<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgvTelefonoUsuario"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/phone"/>

    <ImageView
        android:id="@+id/imgvEmailUsuario"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/message"/>

</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/action_bar"
        android:text="@string/telefono"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/action_bar"
        android:text="@string/email"/>

</LinearLayout>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/action_bar"
    android:text="@string/biografiaUsuario"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/txtvBiografiaUsuario" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/action_bar"
    android:text="@string/proyectos"/>

<ListView
    android:id="@+id/lstvProyectosUsuario"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

</LinearLayout>